--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				</ul>
 			</div>
 			<div class="col-div-3">
-				<button class="get-btn">Login</button>
+				<a href="Arshu_Customs-master/Cart&Checkout/cart.html"><button class="get-btn">cart</button></a>
 				<a href="#" class="menu-icon">&#9776;</a>
 			</div>
 			<div class="clearfix"></div>
