--- a/index.html
+++ b/index.html
@@ -212,16 +212,16 @@
 			<h4>Contact</h4>
 			<ul class="foot-ul">
 				<li>
-					<a href="#"><img src="image/location.png" class="fot-icon"></a>
+					<a href="#"><img src="image/location.PNG" class="fot-icon"></a>
 					<p>VISIT US <br><span>Guntur </span></p>
 				</li>
 				<li>
-					<a href="#"><img src="image/email.png" class="fot-icon"></a>
+					<a href="#"><img src="image/email.PNG" class="fot-icon"></a>
 					<p>EMAIL US <br><span>ARSHU  CUSTOMS@gmail.com</span></p>
 					
 				</li>
 				<li>
-					<a href="#"><img src="image/call.png" class="fot-icon"></a>
+					<a href="#"><img src="image/call.PNG" class="fot-icon"></a>
 					<p>CALL US <br><span>+91090907765</span></p>
 				</li>
 				
