--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 			<p class="foot-p">
 				We provide good service with good qality in perfect way   
 			</p>
-			<img src="image/s-icon.png" style="margin-left:-10px; margin-top: 10px;">
+			<img src="image/s-icon.PNG" style="margin-left:-10px; margin-top: 10px;">
 			
 		</div>
 		<div class="col-div-3">
